[project]
name = "stupidwebauthnsdkflask"
version = "0.1.0"
description = ""
authors = [{ name = "Lucian I. Last", email = "li@last.nl" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["flask (>=3.1.0,<4.0.0)", "requests (>=2.32.3,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
